--- a/package.json
+++ b/package.json
@@ -9,14 +9,43 @@
 		"email": "me@AhmadAwais.com",
 		"url": "https://twitter.com/MrAhmadAwais"
 	},
-	"main": "index.js",
-	"files": [
-		"index.js"
-	],
 	"keywords": [
 		"cli-should-cancel",
 		"Ahmad Awais",
 		"ahmadawais"
 	],
-	"dependencies": {}
+	"files": [
+		"dist",
+		"*.d.ts"
+	],
+	"type": "module",
+	"main": "dist/index.cjs",
+	"module": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"exports": {
+		".": {
+			"import": {
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.js"
+			},
+			"require": {
+				"types": "./dist/index.d.cts",
+				"default": "./dist/index.cjs"
+			}
+		}
+	},
+	"scripts": {
+		"dev": "npm run build -- --watch",
+		"build": "tsup index.js --format cjs,esm --dts --sourcemap --clean --minify --shims",
+		"prepublishOnly": "npm run build",
+		"format": "prettier --write \"./**/*.{js,json}\""
+	},
+	"devDependencies": {
+		"@types/node": "^22.2.0",
+		"tsup": "^8.2.4",
+		"typescript": "^5.5.4"
+	},
+	"dependencies": {
+		"chalk": "^5.3.0"
+	}
 }
